--- a/.env
+++ b/.env
@@ -1,2 +1,7 @@
 GITHUB_SECRET=ea2d0ee17c1d0591422a045f725b711a4696629c
 GITHUB_ID=81c952e3f1f089c9f84d
+
+GOOGLE_ID=
+GOOGLE_SECRET=
+
+NEXTAUTH_SECRET=authpractice
