--- a/.env
+++ b/.env
@@ -1,7 +1,9 @@
 GITHUB_SECRET=ea2d0ee17c1d0591422a045f725b711a4696629c
 GITHUB_ID=81c952e3f1f089c9f84d
 
-GOOGLE_ID=
-GOOGLE_SECRET=
+GOOGLE_ID=815163049796-trudme8jn2vm1dct4ecf0ga4v7oev482.apps.googleusercontent.com
+GOOGLE_SECRET=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
 
 NEXTAUTH_SECRET=authpractice
+
+BACKEND_URL="http://localhost:5000/api/v1"
